# Recon

./: Cargo.toml  README.md
config/: default.toml
src/: config.rs  main.rs
src/agents/: agent.rs  mod.rs
src/analysis/: agent_data.rs  api_efficiency.rs  mod.rs  security.rs
src/llm/: mod.rs  prompts.rs  providers.rs
src/mcp/: client.rs  mod.rs  server.rs
src/parsers/: mod.rs
src/report/: json.rs  mod.rs  sarif.rs  terminal.rs
src/scanner/: agents.rs  api_endpoints.rs  db_connections.rs  functions.rs  mod.rs  secrets.rs
src/skills/: mod.rs  skill.rs
